@@ -4,6 +4,8 @@ NEXT
 	*	base command improvements:
 		vc-perlbrew : fix bugs in `INSTALL` that caused complete failure to install
 		vc-perlbrew : restore original values for Perl env vars when spawning shell commands
+	*	modified global switches:
+		--yes : now passed on to nested commands
 
 0.17	2018-09-13		027306f987
 	*	base command improvements:
